my first homework

--- a/proyecto1/index.html
+++ b/proyecto1/index.html
@@ -7,7 +7,7 @@
     <title>Mi primer proyecto</title>
 </head>
 <body>
-    <h1>hola mundo</h1>   
+    <h1>hola mundo soy leon </h1>   
 </body>
 </html>
 
